# tarot

./: CMakeLists.txt  game.c  tarot.c
Projet_Tarot/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  TI.c  TI.h  cmake_install.cmake  game.c  game.h  pts.c  tarot  tarot.c  tarot_graphic.c  tarot_sdl
